fix styles to wrap content in property, manager list

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,4 @@
-@import url("styles.scss");
+
 
 /*Specification*/
 
@@ -23,6 +23,15 @@ $color-fff: #fff;
   font-family: Helvetica Neu Bold;
   src: url("../fonts/Helvetica Neu Bold.ttf") format("opentype");
 }*/
+
+
+:host {
+    .plus__circle {
+        svg {
+            width: 3em;
+        }
+    }
+}
 
 body {
     font-family: $font-main, Helvetica, Arial, sans-serif;
@@ -74,7 +83,7 @@ label {
     }
     .table__block {
         border: 1px solid black;
-        width: 245px;
+        width: auto;
         border-radius: 15px;
         padding: 1% 1% 1% 2%;
         margin-left: 6%;
@@ -88,6 +97,7 @@ label {
             font-size: 10px;
             border: 1px solid $color-ff;
             padding: 8px 10px;
+            margin:20px;
             text-align: center;
             border-radius: 6px;
             background-color: $color-ff;
