--- a/src/app/inventory/room/room.component.scss
+++ b/src/app/inventory/room/room.component.scss
@@ -11,5 +11,8 @@
     th input[type="text"]:enabled {
         background-color: #ffffff !important;
     }
+    .edit::disabled{
+        background-color: #ffffff  !important;
+    }
         
 }
