--- a/src/app/property/credentials/credentials.component.scss
+++ b/src/app/property/credentials/credentials.component.scss
@@ -1,4 +1,4 @@
-@import url("styles.scss");
+
 
 /*Specification*/
 
@@ -23,6 +23,13 @@ $font-sz-12: 12px;
   font-family: Helvetica Neu Bold;
   src: url("../fonts/Helvetica Neu Bold.ttf") format("opentype");
 }*/
+:host {
+    .plus__circle {
+        svg {
+            width: 3em;
+        }
+    }
+}
 
 body {
     font-family: $font-main, Helvetica, Arial, sans-serif;
@@ -80,10 +87,13 @@ label {
         margin-top: 2%;
         margin-bottom: 2%;
         box-shadow: -5px 5px 3px 4px black;
+        width:auto;
     }
     .text__block__btn {
         text-align: end;
         .btn__item {
+            float:right;
+            margin:20px;
             font-size: 10px;
             border: 1px solid $color-ff;
             padding: 8px 10px;
