--- a/src/app/property/employee/employee.component.scss
+++ b/src/app/property/employee/employee.component.scss
@@ -1,4 +1,3 @@
-@import url("styles.scss");
 
 /*Specification*/
 
@@ -15,6 +14,13 @@ $font-gray5: #76756F;
 $font-bold: 700;
 $font-sz-12: 12px;
 
+:host {
+    .plus__circle {
+        svg {
+            width: 3em;
+        }
+    }
+}
 /*@font-face {
   font-family: HelveticaNeue Thin;
   src: url("../fonts/HelveticaNeue Thin.ttf") format("opentype");
@@ -74,7 +80,7 @@ label {
     }
     .table__block {
         border: 1px solid black;
-        width: 245px;
+        width: auto;
         border-radius: 15px;
         padding: 1% 1% 1% 2%;
         margin-left: 6%;
@@ -88,6 +94,7 @@ label {
             font-size: 10px;
             border: 1px solid $color-ff;
             padding: 8px 10px;
+            margin:20px;
             text-align: center;
             border-radius: 6px;
             background-color: $color-ff;
